Bug 166321 - Find bar: blank square with gen environment
Summary: Find bar: blank square with gen environment
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Find-Search
  Show dependency treegraph
 
Reported: 2025-04-24 08:20 UTC by Xisco Faulí
Modified: 2025-08-27 08:34 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (7.98 KB, image/png)
2025-04-24 08:20 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-04-24 08:20:49 UTC
Created attachment 200494 [details]
screenshot

Steps to reproduce:
1. Run LibreOffice with SAL_USE_VCLPLUGIN=gen instdir/program/soffice
2. Open any application
3. Ctrl + F

-> There is a blank square at the right side of the bar. see screenshot
Comment 1 Xisco Faulí 2025-04-24 08:21:47 UTC
Regression introduced by:

commit e0d4d178caff1414a9a21fa57f06bc8d4d2c389a	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jan 13 15:03:05 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jan 14 15:47:13 2025 +0100
tree 2ac5062c997ee9a3a29e61f1e1039595468117c8
parent 3eaa35e8bacc19a85f5c9d907450846bfa8bffae [diff]

Change alpha behavour of OutputDevice::SetFillColor

Bisected with bibisect-linux64-25.8
Comment 2 V Stuart Foote 2025-04-25 10:48:18 UTC
(In reply to Xisco Faulí from comment #0)

> 
> -> There is a blank square at the right side of the bar. see screenshot

Isn't that the place holder for the 'Search results message'? Toggles on or off with the Find bar's visible buttons.

It appears as an off color rectangle/square with the default win vcl.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6869da60961a6213fc961c2ece371c0f18038cde
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2025-05-29 09:01:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87b3b8e6990b394baa74aec8701cd097f6c0c646

tdf#166321 Find bar: blank square with gen environment

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Helen Grace 2025-08-27 08:27:55 UTC Comment hidden (spam)