include/vcl/weld.hxx
@@ -369,6 +369,8 @@ public:
     //trying to use a custom color for a background is generally a bad idea. If your need
     //fits one of the above categories then that's a somewhat better choice
     virtual void set_background(const Color& rBackColor) = 0;
+    // reset to default background
+    virtual void set_background() = 0;
 
     virtual css::uno::Reference<css::datatransfer::dnd::XDropTarget> get_drop_target() = 0;
     virtual css::uno::Reference<css::datatransfer::clipboard::XClipboard> get_clipboard() const = 0;
