vcl/inc/salvtables.hxx
@@ -397,6 +397,8 @@ public:
 
     virtual void set_background(const Color& rColor) override;
 
+    virtual void set_background() override;
+
     virtual void draw(OutputDevice& rOutput, const Point& rPos, const Size& rSizePixel) override;
 
     SystemWindow* getSystemWindow();
